--- a/Blog/Backend/src/modules/account/view/backendAccount.html
+++ b/Blog/Backend/src/modules/account/view/backendAccount.html
@@ -3,12 +3,8 @@
     <div class="page-content">
       <div class="page-header">
         <h1>
-          <a href="#/backendAccount" style="color: #34ACC6; text-decoration:none;">
-            帳號管理
-          </a>
-          <i class="ace-icon fa fa-angle-double-right" style="color: #B7B7B7;"></i>
-          <a href="#/backendAccount" style="color: #34ACC6; text-decoration:none;">
-            後台帳號
+          <a href="#/home" style="color: #9F4344; text-decoration:none;">
+            Account Management
           </a>
         </h1>
       </div>
@@ -16,7 +12,7 @@
         <div class="row" style="float: right; margin: 10px 0px; padding-right: calc(15px + 7px );">
           <div class="media-body align-self-center text-right">
             <button class="btn btn-sm btn-add " ng-click="adminInfoPopoverView()">
-              <i class="ace-icon glyphicon glyphicon-plus"></i>新增使用者
+              <i class="ace-icon glyphicon glyphicon-plus"></i>Add Users
             </button>
           </div>
         </div>
