--- a/Blog/Backend/src/modules/common/views/confirm.html
+++ b/Blog/Backend/src/modules/common/views/confirm.html
@@ -13,11 +13,11 @@
 	<div align="center">
 		<button class="btn btn-sm btn-save" ng-click="close(true)">
 			<!-- <i class='ace-icon fa fa fa-check bigger-110'></i>&nbsp;  -->
-			確定
+			OK
 		</button>
 		<button class="btn btn-sm btn-cancel" ng-click="close(false)">
 			<!-- <i class='ace-icon fa fa-times bigger-110'></i>&nbsp;  -->
-			取消
+			Cancel
 		</button>
 	</div>
 	<div class="space-6"></div>
