--- a/Blog/Backend/src/modules/content/view/contentEdit.html
+++ b/Blog/Backend/src/modules/content/view/contentEdit.html
@@ -3,8 +3,8 @@
         <div class="page-content">
             <div class="page-header">
                 <h1>
-                    <a href="#/vendor" style="color: #006895; text-decoration:none;">
-                        商家管理
+                    <a href="#/home" style="color: #006895; text-decoration:none;">
+                        Content Management
                     </a>
                 </h1>
             </div>
@@ -14,7 +14,7 @@
                 <div class="col-xs-12 col-sm-12 widget-container-col">
                     <div class="widget-box widget-color-samon" id="widget-box-9">
                         <div class="widget-header">
-                            <h5 class="widget-title">新增商家資料</h5>
+                            <h5 class="widget-title">Add Content</h5>
                             <div class="widget-toolbar">
                                 <a href="#" data-action="collapse">
                                     <i class="1 ace-icon fa fa-chevron-up bigger-125"></i>
@@ -27,11 +27,11 @@
                                     <div class="col-xs-12 col-sm-12 widget-container-col">
                                         <div class="form-group">
                                             <label class="col-sm-1 control-label no-padding-right">
-                                                <font color="#FF0000">*</font>商家統編
+                                                <font color="#FF0000">*</font>Title
                                             </label>
                                             <div class="col-sm-5">
                                                 <input type="text" placeholder="" class="form-control"
-                                                    ng-model="vendor.taxId" required>
+                                                    ng-model="content.title" required>
                                             </div>
                                         </div>
                                     </div>
@@ -40,16 +40,16 @@
                                     <div class="col-xs-12 col-sm-12">
                                         <div class="form-group">
                                             <label class="col-sm-1 control-label no-padding-right">
-                                                <font color="#FF0000">*</font>商家名稱 </label>
+                                                <font color="#FF0000">*</font>Category </label>
                                             <div class="col-sm-5">
                                                 <input type="text" placeholder="" class="form-control"
-                                                    ng-model="vendor.vendorName" required>
+                                                    ng-model="content.category" required>
                                             </div>
                                             <label class="col-sm-1 control-label no-padding-right">
-                                                <font color="#FF0000">*</font>負責人姓名 </label>
+                                                <font color="#FF0000">*</font>Author </label>
                                             <div class="col-sm-5">
                                                 <input type="text" placeholder="" class="form-control"
-                                                    ng-model="vendor.ownerName" required>
+                                                    ng-model="content.author" required>
                                             </div>
                                         </div>
                                     </div>
@@ -58,20 +58,20 @@
                                     <div class="col-xs-12 col-sm-12">
                                         <div class="form-group">
                                             <label class="col-sm-1 control-label no-padding-right">
-                                                <font color="#FF0000">*</font>備註 </label>
+                                                <font color="#FF0000">*</font>Content </label>
                                             <div class="col-sm-11">
-                                                <input type="text" placeholder="若沒有備註，請填寫無。" class="form-control"
-                                                    ng-model="vendor.note" required>
+                                                <input type="text" placeholder="" class="form-control"
+                                                    ng-model="content.content" required>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="widget-toolbox padding-8 clearfix">
-                                <button class="btn btn-sm btn-add pull-right margin_left" ng-click="saveVendor(contentForm.$valid)">
-                                    <i class="ace-icon glyphicon glyphicon-save"></i>儲存</button>
+                                <button class="btn btn-sm btn-add pull-right margin_left" ng-click="saveContent(contentForm.$valid)">
+                                    <i class="ace-icon glyphicon glyphicon-save"></i>Save</button>
                                 <button class="btn btn-sm btn-search pull-right margin_left" ng-click="cancel()">
-                                    <i class="ace-icon glyphicon glyphicon-remove"></i>取消</button>
+                                    <i class="ace-icon glyphicon glyphicon-remove"></i>Cancel</button>
                             </div>
                         </form>
                     </div>
