--- a/Blog/Backend/src/modules/home/view/home.html
+++ b/Blog/Backend/src/modules/home/view/home.html
@@ -57,7 +57,25 @@
 								</div>
 								<div class="infobox-data">
 									<span class="infobox-data-number">100</span>
-									<div class="infobox-content">所有商家數</div>
+									<div class="infobox-content">Articles</div>
+								</div>
+							</div>
+							<div class="infobox infobox-orange">
+								<div class="infobox-icon">
+									<img src="assets/img/icon_store.png">
+								</div>
+								<div class="infobox-data">
+									<span class="infobox-data-number">50</span>
+									<div class="infobox-content">Authors</div>
+								</div>
+							</div>
+							<div class="infobox infobox-orange">
+								<div class="infobox-icon">
+									<img src="assets/img/icon_store.png">
+								</div>
+								<div class="infobox-data">
+									<span class="infobox-data-number">3</span>
+									<div class="infobox-content">Categories</div>
 								</div>
 							</div>
 						</div>
