--- a/Blog/Backend/src/modules/login/view/loginContent.html
+++ b/Blog/Backend/src/modules/login/view/loginContent.html
@@ -3,7 +3,7 @@
         <div class="text-center">
             <form role="form" name="myForm">
                 <div class="row">
-                    <div class="title">Blog Backend Login</div>
+                    <div class="title">Blog Backend</div>
                     <div class="form-group col-md-10 col-md-offset-1 col-xs-10 col-xs-offset-1">
                         <div class="col-md-2 col-xs-2"  style="padding:0;">
                             <img class="login-icon" src="assets/img/bar_one_id.png">
