--- a/Blog/Backend/src/assets/css/custom.css
+++ b/Blog/Backend/src/assets/css/custom.css
@@ -37,7 +37,7 @@
     color: #333;
     padding: 8px 16px;
     /* background-color: #fbdcae;  */
-    background-color: #34ACC6; 
+    background-color: #FF6811; 
     border-bottom: 2px #eb6e3a solid;
 
       font-size: 1.5em;
