--- a/Blog/Backend/src/modules/share/view/header.html
+++ b/Blog/Backend/src/modules/share/view/header.html
@@ -1,9 +1,9 @@
-<div id="navbar" class="navbar navbar-default ace-save-state" style="background-color: #34ACC6;">
+<div id="navbar" class="navbar navbar-default ace-save-state" style="background-color: #FF6811;">
 	<div class="navbar-container ace-save-state" id="navbar-container">
 		<div class="navbar-header pull-left">
 			<a href="#/" class="navbar-brand">
 				<small>
-					後台系統平台
+					Blog Backend
 				</small>
 			</a>
 		</div>
@@ -11,30 +11,27 @@
 		<div class="navbar-buttons navbar-header pull-right" role="navigation">
 			<ul class="nav ace-nav">
 				<li class="light-blue dropdown-modal">
-					<a data-toggle="dropdown" href="#" class="dropdown-toggle" style="background-color: #34ACC6;">
-						<img class="nav-user-photo" src="assets/images/avatars/avatar5.png" />
-						<span>
-							歡迎&nbsp;&nbsp;&nbsp;&nbsp;{{rootUser.adminType | adminTypeName }} &nbsp;&nbsp; : &nbsp;&nbsp;
-							{{rootUser.userName}} &nbsp;&nbsp;&nbsp;
+					<a data-toggle="dropdown" href="#" class="dropdown-toggle" style="background-color: #FF6811;">
+						<span style="font-style: italic">
+							{{rootUser.adminType | adminTypeName }}
+						</span>
+						<span>&numsp;-&numsp;</span>
+						<span style="font-weight: bolder">
+							{{rootUser.userName}}
 						</span>
 						<i class="ace-icon fa fa-caret-down"></i>
 					</a>
 					<ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
-						<li style="display: none;">
-							<a href="#/profile">
-								<i class="ace-icon fa fa-user"></i>個人資料
-							</a>
-						</li>
 						<li class="divider" style="display: none;"></li>
 						<li>
-							<a href="#/updataPw">
-								<i class="ace-icon fa fa-user"></i>修改密碼
+							<a href="#/updatePw">
+								<i class="ace-icon fa fa-user"></i>Change Password
 							</a>
 						</li>
 						<li class="divider"></li>
 						<li>
 							<a href="#" ng-click="logout()">
-								<i class="ace-icon fa fa-power-off"></i>登出
+								<i class="ace-icon fa fa-power-off"></i>Logout
 							</a>
 						</li>
 					</ul>
