--- a/Blog/Backend/src/modules/share/view/leftMenu.html
+++ b/Blog/Backend/src/modules/share/view/leftMenu.html
@@ -1,22 +1,22 @@
 <ul class="nav nav-list">
 	<li class="">
 		<a href="#/home">
-			<i class="menu-icon fa fa-file"></i>
-			<span class="menu-text"> 資訊總覽 </span>
+			<i class="menu-icon fa fa-info-circle"></i>
+			<span class="menu-text"> Information </span>
 		</a>
 		<b class="arrow"></b>
 	</li>
 	<li class="">
 		<a href="#/backendAccount">
-			<i class="menu-icon fa fa-home"></i>
-			<span class="menu-text"> 帳號管理 </span>
+			<i class="menu-icon fa fa-user"></i>
+			<span class="menu-text"> Account </span>
 		</a>
 		<b class="arrow"></b>
 	</li>
 	<li class="">
-		<a href="#/vendor">
-			<i class="menu-icon fa fa-home"></i>
-			<span class="menu-text"> 商家管理 </span>
+		<a href="#/content">
+			<i class="menu-icon fa fa-file-text"></i>
+			<span class="menu-text"> Content </span>
 		</a>
 		<b class="arrow"></b>
 	</li>
