[Blog] Backend content頁面完成

--- a/Blog/Backend/src/modules/content/view/contentEdit.html
+++ b/Blog/Backend/src/modules/content/view/contentEdit.html
@@ -40,16 +40,34 @@
                                     <div class="col-xs-12 col-sm-12">
                                         <div class="form-group">
                                             <label class="col-sm-1 control-label no-padding-right">
-                                                <font color="#FF0000">*</font>Category </label>
+                                                <font color="#FF0000">*</font>Category 1</label>
                                             <div class="col-sm-5">
                                                 <input type="text" placeholder="" class="form-control"
-                                                    ng-model="content.category" required>
+                                                    ng-model="content.category1">
                                             </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row margin_top">
+                                    <div class="col-xs-12 col-sm-12">
+                                        <div class="form-group">
                                             <label class="col-sm-1 control-label no-padding-right">
-                                                <font color="#FF0000">*</font>Author </label>
+                                                <font color="#FF0000">*</font>Category 2</label>
                                             <div class="col-sm-5">
                                                 <input type="text" placeholder="" class="form-control"
-                                                    ng-model="content.author" required>
+                                                       ng-model="content.category2">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row margin_top">
+                                    <div class="col-xs-12 col-sm-12">
+                                        <div class="form-group">
+                                            <label class="col-sm-1 control-label no-padding-right">
+                                                <font color="#FF0000">*</font>Category 3</label>
+                                            <div class="col-sm-5">
+                                                <input type="text" placeholder="" class="form-control"
+                                                       ng-model="content.category3">
                                             </div>
                                         </div>
                                     </div>
@@ -61,7 +79,7 @@
                                                 <font color="#FF0000">*</font>Content </label>
                                             <div class="col-sm-11">
                                                 <input type="text" placeholder="" class="form-control"
-                                                    ng-model="content.content" required>
+                                                    ng-model="content.content">
                                             </div>
                                         </div>
                                     </div>
